add: scss files

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,6 @@
 @import 'bootstrap/scss/bootstrap.scss';
 
+@import './partials/variables';
 @import './partials/typography';
+@import './partials/general';
+@import './partials/mixin';
