--- a/src/scss/partials/_typography.scss
+++ b/src/scss/partials/_typography.scss
@@ -1,6 +1,25 @@
 @import '@fontsource-variable/josefin-sans/wght-italic.css';
 @import '@fontsource-variable/lexend';
 
-body {
-  font-family: 'Lexend Variable', 'Josefin Sans Variable', sans-serif;
-}
+// TEXT VARIABLES
+
+// Fonts
+$primary_font: 'Lexend Variable';
+$secondary_font: 'Josefin Sans Variable';
+$tertiary_font: 'sans-serif';
+
+// Font Weights
+
+$fw-100: 100;
+$fw-200: 200;
+$fw-300: 300;
+$fw-400: 400;
+$fw-500: 500;
+$fw-600: 600;
+$fw-700: 700;
+$fw-800: 800;
+$fw-900: 900;
+
+// Font Sizes
+
+$fs-1: 0.1rem;
