--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -69,3 +69,19 @@ a{
     color: #198754;
   }
 }
+
+.btn-close-cart{
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  color: $custom_gray;
+  border-radius: 50%;
+  border: 2px solid $custom_gray;
+  &:hover{
+    color: $tertiary_color;
+    border: 2px solid $tertiary_color;
+  }
+}
