--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -74,14 +74,17 @@ a{
   position: absolute;
   top: 15px;
   right: 15px;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  color: $custom_gray;
+  color: $tertiary_color;
+  border: 2px solid $tertiary_color;
   border-radius: 50%;
-  border: 2px solid $custom_gray;
   &:hover{
-    color: $tertiary_color;
-    border: 2px solid $tertiary_color;
+    color: $custom_gray;
+    border: 2px solid $custom_gray;
   }
 }
